<resources>
    <string name="app_name">weatherViews</string>
    <string name="degree">24°C</string>
    <string name="today_weather">Moon Cloud Fast Wind</string>
    <string name="erzurum">Erzurum</string>
    <string name="visibility">visibility</string>
    <string name="wind">Wind</string>
    <string name="thermometer">thermometer</string>
    <string name="humidity">humidity</string>
    <string name="today">Today</string>
    <string name="hourFive">05.00</string>
    <string name="degreeTwenty">20°C</string>
    <string name="hourEight">08.00</string>
    <string name="degreeTwentyTwo">22°C</string>
    <string name="hourEleven">11.00</string>
    <string name="degreeTwentySix">26°C</string>
    <string name="days"><![CDATA[Next 7 days >]]></string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>