<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/viewmain"
    tools:context=".view.HomeFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/erzurum"
            android:textSize="25sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:backgroundTint="#665BBA"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/fragmentImagView"
                    android:layout_width="180dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/mooncloudfastwind" />

                <TextView
                    android:id="@+id/fragmentDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="65dp"
                    android:text="@string/degree"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:text="@string/today_weather"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="100dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="285dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_round_visibility" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="275dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/visibility"
                    android:textColor="@android:color/holo_blue_dark" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_tabler_wind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/wind"
                    android:textColor="@android:color/holo_blue_dark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_carbon_humidity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/humidity"
                    android:textColor="@android:color/holo_blue_dark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="195dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_ion_speedometer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="166dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/thermometer"
                    android:textColor="@android:color/holo_blue_dark" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/today"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="-30dp"
            android:text="@string/days"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/weather_hour" />





</LinearLayout>