<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wiewmain"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/erzurum"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="3dp"
        android:gravity="center"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:backgroundTint="#A490D7"
            app:cardCornerRadius="25dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/cloudy"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:text="@string/degree"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/day"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="390dp"
            android:layout_height="100dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="285dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/eyes"
                android:contentDescription="@string/todo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="245dp"
                android:layout_marginTop="50dp"
                android:text="@string/g_r_mesafesi"
                android:textColor="@android:color/holo_blue_dark" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/wind"
                android:contentDescription="@string/todo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"
                android:text="@string/wind"
                android:textColor="@android:color/holo_blue_dark" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/hygrometer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/moisture"
                android:textColor="@android:color/holo_blue_dark" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="178dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/pressure"
                android:contentDescription="@string/todo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="50dp"
                android:text="@string/pressure"
                android:textColor="@android:color/holo_blue_dark" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20sp"
        android:text="@string/today"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="-25dp"
        android:text="@string/days"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#5357AC"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/rain_cloud"
                android:contentDescription="@string/todo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_marginTop="5dp"
                android:text="@string/hourFive"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_marginTop="75dp"
                android:text="@string/degreeTwenty"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="#5357AC"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/sun_small_cloud"
                android:contentDescription="@string/todo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_marginTop="5dp"
                android:text="@string/hourEight"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_marginTop="75dp"
                android:text="@string/degreeTwentyTwo"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="#5357AC"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/sun"
                android:contentDescription="@string/todo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_marginTop="5dp"
                android:text="@string/hourEleven"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_marginTop="75dp"
                android:text="@string/degreeTwentySix"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="#5357AC"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true" />

    </LinearLayout>


</LinearLayout>